@@ -6,6 +6,7 @@ The keys used are:
 
 hg tip:
 
+  + imap-logout-all closes all open IMAP connections
   ! header/body cache paths are always UTF-8
   + $wrap_headers to control outgoing message's header length
   + all text/* parts can be displayed inline without mailcap
